--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -79,9 +79,9 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 40px;
+  width: 50px;
   // set width only, for non-square avatars
-  // height: 36px;
+  height: 70px;
 
   @include breakpoint($large) {
     display: block;
@@ -94,8 +94,8 @@
     border-radius: 0%;
 
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+      padding: 0px;
+      border: 0px solid $border-color;
     }
   }
 }
